# CANavaccioulo

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  canup.sh
cmake/: stableCOPSConfig.cmake.in
config/motors/: euservo_rp.yml  eyou_phu.yml
dcf/: master.dcf
docs/: architecture.md  canopen_motor_pipeline.md  development.md  eyou_rp_notes.md
examples/: csp_position.cpp  cst_torque.cpp  csv_velocity.cpp  enable_and_hold.cpp  motion_faster_can_move.cpp  motion_faster_encoder.cpp  multi_drive.cpp  pdo_feedback_monitor.cpp  pp_move.cpp  pt_torque.cpp  pv_velocity.cpp  validate_trajectory.cpp  zero_leg.cpp
include/stablecops/app/: Bus.hpp  CanopenApplication.hpp  MotorConfig.hpp  MotorDrive.hpp  RealtimeScheduling.hpp
include/stablecops/config/: MotorConfig.hpp  PdoMap.hpp
include/stablecops/ds402/: DriveController.hpp  ObjectAccess.hpp  ObjectDictionary.hpp
include/stablecops/lely/: CyclicStats.hpp  MotorDriver.hpp
include/stablecops/log/: Log.hpp
src/app/: Bus.cpp  CanopenApplication.cpp  MotorDrive.cpp  RealtimeScheduling.cpp
src/config/: MotorConfig.cpp  PdoMap.cpp
src/ds402/: DriveController.cpp
src/lely/: MotorDriver.cpp
src/log/: Log.cpp
src/tools/: stablecops_commissiond.cpp  stablecops_master.cpp
tests/: stablecops_tests.cpp
tools/: canlog.sh  generate_canopen_config.py  lint.sh  scan_nodes.sh  set_can_id.sh
